--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.25.0",
+		"flat-carousel": "^0.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
