--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
+		"react-instagram-embed": "^3.0.0",
 		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "4.0.3",
+		"react-scroll": "^1.8.6",
 		"styled-components": "^5.3.3",
 		"web-vitals": "^1.0.1"
 	},
