--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.25.0",
+		"express": "^4.17.3",
 		"flat-carousel": "^0.0.1",
+		"isomorphic-fetch": "^3.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
