--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.25.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.3",
 		"flat-carousel": "^0.0.1",
 		"isomorphic-fetch": "^3.0.0",
