--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "wb-media",
 	"version": "0.1.0",
 	"dependencies": {
+		"@flockler/react-flockler-embed": "^1.0.3",
 		"@react-spring/parallax": "^9.4.0",
 		"@react-spring/web": "^9.4.0",
 		"@testing-library/jest-dom": "^5.11.4",
