--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.3",
 		"flat-carousel": "^0.0.1",
+		"framer-motion": "^6.3.2",
 		"isomorphic-fetch": "^3.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
